# health-data-analyzer

./: .env.example  .gitignore  BACKLOG.md  PIPELINE.md  PIPELINE_GUIDELINES.md  README.md  debug_charts.py  debug_report.py  fix_tokens.py  health_demo.txt  requirements-test.txt  requirements.txt  run.sh  setup.py  simple_test.py  test_4stage_pipeline.py  test_legacy_shim.py  test_oura_api_responses.py  test_resilience_extractor.py  test_services.py  test_shim_conversion.py  token_refresh_analysis.md  tracker
config/: user_config.yaml.example
docs/: BACKLOG.md  PIPELINE.md  REFACTORING_SUMMARY.md  architecture.md  configuration-system.md  configuration-tracking.md  refactor-api-client-architecture.md
experiments/: CLIENT_ARCHITECTURE_COMPLETE.md  USAGE_GUIDE.md  auth_base.py  example_usage.py  test_comprehensive_refresh.py  test_whoop_experimental.py  test_withings_experimental.py  whoop_client.py  withings_client.py
experiments/clients/: __init__.py  api_key_auth_base.py  api_key_client.py  auth_base.py  config.py  hevy_client.py  oauth2_auth_base.py  onedrive_client.py  oura_client.py  whoop_client.py  withings_client.py
experiments/services/: __init__.py  oura_service.py
experiments/tests/: __init__.py
holding/: analyzer_config.py  hevy_constants.py  whoop_constants.py
local-healthkit/: LICENSE  README.md  pyproject.toml
local-healthkit/examples/: example_usage.py
local-healthkit/local_healthkit/: __init__.py  exceptions.py
local-healthkit/local_healthkit/clients/: __init__.py  hevy.py  nutrition.py  onedrive.py  oura.py  whoop.py  withings.py
local-healthkit/local_healthkit/clients/base/: __init__.py  api_key_auth.py  oauth2_auth_base.py
local-healthkit/local_healthkit/services/: __init__.py  hevy.py  nutrition.py  onedrive.py  oura.py  whoop.py  withings.py
local-healthkit/tests/: test_restored_package.py
src/: app_config.py  main.py
src.old/: clean_pipeline.py
tests/: test_e2e.py  test_end_to_end.py  test_pdf_only.py  test_range.py  test_simple_e2e.py  test_token_refresh.py
(+164 files in other folders)
