[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-healthkit"
version = "2.0.0"
description = "Production-ready clients and services for health data APIs"
authors = [{name = "Thomas Newton", email = "thomas.newton@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["health", "api", "whoop", "oura", "withings", "hevy", "onedrive"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

dependencies = [
    "requests>=2.25.0",
    "authlib>=1.2.0",
    "msal>=1.16.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=0.900",
    "flake8>=4.0",
]
all = [
    "oura>=1.3.0",
    "withings-api>=2.3.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/local-healthkit"
Repository = "https://github.com/yourusername/local-healthkit"
Documentation = "https://github.com/yourusername/local-healthkit#readme"
"Bug Tracker" = "https://github.com/yourusername/local-healthkit/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["local_healthkit*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
